class Memory {
	public:
		int x;
		int y;
};
